# cloupe

./: README.md  cloupe.ipynb  pyproject.toml
src/cloupe/: __init__.py  cloupe.py
src/cloupe_package_nj9/: README.md  __init__.py  cloupe.py
