[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloupe"
version = "0.1.0"
authors = [
    { name="Martin Prete", email="martin.prete@sanger.ac.uk" },
    { name="Nithin Mathew Joseph", email="nithin.mathew.joseph@sanger.ac.uk" },
]
description = "Cloupe Parser"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cellgeni/cloupe"
Issues = "https://github.com/cellgeni/cloupe/issues"