[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloupe"
dynamic = ["version"]
authors = [
    { name="Martin Prete", email="mp33@sanger.ac.uk" },
    { name="Nithin Mathew Joseph", email="nj9@sanger.ac.uk" },
]
license = {file = "LICENSE"}
description = "Cloupe Parser"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cellgeni/cloupe"
Issues = "https://github.com/cellgeni/cloupe/issues"

[tool.hatch.version]
path = "src/cloupe/__init__.py"